service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s-secure-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: s-secure
